--- a/assets/style.scss
+++ b/assets/style.scss
@@ -14,12 +14,31 @@ body{
     align-items: center;
     gap:25px;
 
+    #gameOver{
+        display: none;
+
+        &.active{
+            display: block;
+        }
+    }
+
     .playerActions{
         display: flex;
         gap:10px;
     }
 
-    #gameChoice, #gamePlay {
+    #gameChoice{
+        display: none;
+        
+        &.active{
+            display: flex;
+            flex-direction: column;
+            gap:5px;
+            // border:1px solid green;
+        }
+    }
+
+    #gamePlay {
         display: none;
 
         &.active{
@@ -39,6 +58,54 @@ body{
             flex-direction: column;
             align-items: center;
             max-width: 650px;
+
+            .playerActions{
+                margin-top: 15px;
+
+                button{
+                    width: 145px;
+                    height: 35px;
+                }
+            }
+
+            #ascii-warrior,  #ascii-magician {
+                display: none;
+
+                &.active{
+                    display: block;
+                }
+            }
+
+            #playerInfos{
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+
+                p {
+                    text-align: center;
+                }
+                
+            }
+
+            .manaContainer{
+                width: 300px;
+                display: flex;
+                position: relative;
+                // border:1px solid red;
+                height: 22px;
+
+                p{
+                    position: absolute;
+                    border: 1px solid black;
+                    height: 100%;
+                    width: 100%;
+                    text-align: center;
+                }
+                .mana{
+                    background-color: rgb(45, 196, 234); 
+                    height: 100%;
+                }
+            }
 
             .lifeContainer{
                 width: 300px;
@@ -64,8 +131,9 @@ body{
                 width: 300px;
                 display: flex;
                 position: relative;
+                flex-direction: column;
                 // border:1px solid red;
-                height: 22px;
+                height: auto;
 
                 p{
                     position: absolute;
@@ -73,22 +141,26 @@ body{
                     height: 100%;
                     width: 100%;
                     text-align: center;
+                    height:22px;
                 }
                 .level{
                     background-color: rgb(27, 165, 196); 
-                    height: 100%;
+                    height: 22px;
                 }
             }
         }
 
         #monster{
-            // border:1px solid red;
             width: 300px;
             display: flex;
             justify-content: end;
-            margin-bottom: 40px;
+            margin-bottom: 72px;
             align-items: center;
             flex-direction: column;
+
+            #globalInfos{
+                // background-color: red;
+            }
             #ascii-gobelin, #ascii-zombie, #ascii-skeleton{
                 display: none;
                 &.active{
@@ -128,12 +200,4 @@ body{
             }
         }
     }
-}
-
-
-
-
-button{
-    width: 100px;
-    height: 25px;
 }
